fixed project view in portrait mode on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,6 @@
   text-align: center;
 }
 
-#root {
-  height: 100%;
-}
-
 a {
   color: #dcdcdc;
   text-decoration: none;
