--- a/client/src/components/Projects/Project1/Project1.css
+++ b/client/src/components/Projects/Project1/Project1.css
@@ -34,7 +34,7 @@
   align-items: center;
   display: flex;
   height: 50%;
-  justify-content: right;
+  justify-content: flex-end;
   margin: 0 auto;
 }
 
