--- a/client/src/components/Projects/Project2/Project2.css
+++ b/client/src/components/Projects/Project2/Project2.css
@@ -9,13 +9,12 @@
 }
 
 .right-img {
-  display: flex;
-  justify-content: right;
   width: 100%;
 }
 
 .right-img img {
   border-radius: 10px;
+  float: right;
   width: 60vw;
 }
 
@@ -40,7 +39,7 @@
   align-items: center;
   display: flex;
   height: 50%;
-  justify-content: left;
+  justify-content: flex-start;
   margin: 0 auto;
 }
 
